--- a/index.html
+++ b/index.html
@@ -2,17 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>NOMBRES</title>
+     <center>
+      <button>
+        
+        <a href="#" onclick="javascript:document.body.style.backgroundColor='#D1DC33'; document.body.style.backgroundImage='none';">AMARILLO</a>
+      </button>
+      <button>
+        <a href="#" onclick="javascript:document.body.style.backgroundColor='#121111'; document.body.style.backgroundImage='none';">NEGRO</a>
+      </button>
+      <button>
+        <a href="#" onclick="javascript:document.body.style.backgroundColor='#60CE16'; document.body.style.backgroundImage='none';">VERDE</a>
+      </button>
+     </center>
     <style>
-    
         #canvas
         {
+
             border: 9px solid red;
         }
     </style>
 </head>
 <body>
-    <center>
+       <center>
         <canvas id = "canvas" width = "1000" height = "500"></canvas>
     </center>
     <!-- <script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> //-->
